--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ writable/uploads/*
 writable/debugbar/*
 !writable/debugbar/.gitkeep
 
+writable/database/*
+
 php_errors.log
 
 #-------------------------
